add font-family to css

--- a/website/static/css/main.css
+++ b/website/static/css/main.css
@@ -1,6 +1,6 @@
 
 body {
-    font-family:"Microsoft YaHei",Arial,Helvetica,sans-serif,"黑体";
+    font-family:"Microsoft YaHei","微软雅黑",Arial,Helvetica,sans-serif,"黑体";
     color: #777;
 }
 
