add font-family to css

--- a/website/static/css/main.css
+++ b/website/static/css/main.css
@@ -1,6 +1,6 @@
 
 body {
-    font-family:"Microsoft YaHei",Arial,Helvetica,sans,SimHei !important;;
+    font-family:"Microsoft YaHei",Arial,sans,SimHei !important;;
     color: #777;
 }
 
